Made it 90% perfect. Fixed skills sec and resume.
Updated the landing page, resume and fixed the skills section.

--- a/index.html
+++ b/index.html
@@ -98,132 +98,131 @@
         <!-- NOTE: New design (29/12/24) -->
 
         <div class="introHeroSkills">
-
-        
-
-        <main class="hero">
-            <div class="myDpContainer">
-                <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
-                <div>
-                    My resume :- <a target="_blank"
-                        href="https://drive.google.com/file/d/1FKiw5rS5nF5znLQv2ErKUaWetYIJ6AEW/view?usp=sharing"><i
-                            class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a>
-                </div>
-            </div>
-            <h3>Greetings! 👋🏻 I'm a</h2>
-            <h1 class="heroTitle">Full-Stack Developer</h1>
-            <h2 class="heroSubtitle">& Software Engineer</h2>
-            <p class="description">
-                My name is Kumar Harsh. I am a passionate software engineer with a strong blend of technical expertise and
-                problem-solving skills, dedicated to building robust applications and crafting innovative digital solutions.
-            </p>
-            <div class="social-links">
-                <a href="https://github.com/kharsh560" target="_blank" class="social-icon">
-                    <i class="fa-brands fa-github fa-2xl" style="color: #8c8c8c;"></i>
-                </a>
-                <a href="https://twitter.com/kharsh560" target="_blank" class="social-icon">
-                    <i class="fa-brands fa-x-twitter fa-2xl" style="color: #999999;"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/kharsh560/" target="_blank" class="social-icon">
-                    <i class="fa-brands fa-linkedin fa-2xl" style="color: #a7aaae;"></i>
-                </a>
-                <a href="https://www.instagram.com/kharsh560/" target="_blank" class="social-icon">
-                    <i class="fa-brands fa-instagram fa-2xl" style="color: #8e8f90;"></i>
-                </a>
-            </div>
-        </main>
-
-        <!-- <div id="aboutMeContainerDpAndWriteup">
-            <div id="wrapperDivWrappingDpAndWriteup">
-                <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
-                <div id="aboutMeContainerWriteup">
-                    <h1>About Me</h1>
+            <main class="hero">
+                <div class="myDpContainer">
+                    <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
                     <div>
-                        My resume :- <a target="_blank"
-                            href="https://drive.google.com/file/d/1HooF4SqmK84edZMNINWApt8F5b_elDXp/view?usp=sharing"><i
-                                class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a>
-                    </div>
-                    <p>I am Kumar Harsh, an individual deeply passionate about coding and its various facets. <br>
-                        My primary objectives within the four years of my B.Tech journey, will revolve around acquiring
-                        proficiency in four key areas:<br> <br>
-                        1. Data Structures and Algorithms <br>
-                        2. Full Stack Web Development (MERN stack + NEXT) <br>
-                        3. Data Science:- thus exploring AI & ML! <br>
-                    </p>
-                </div>
-            </div>
-        </div> -->
-
-        <section class="techStacksAndSkillsSection">
-            <div class="tech-skills-section">
-                <h2 class="section-title">Tech Stack & Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill-card">
-                        <h3>Frontend</h3>
-                        <ul>
-                            <li>HTML, CSS</li>
-                            <li>JavaScript</li>
-                            <li>Tailwind CSS</li>
-                            <li>React</li>
-                            <li>Next.js</li>
-                        </ul>
-                    </div>
-                    <div class="skill-card">
-                        <h3>Backend</h3>
-                        <ul>
-                            <li>Node.js</li>
-                            <li>Express.js</li>
-                            <li>MongoDB</li>
-                            <li>Mongoose</li>
-                            <li>Prisma</li>
-                            <li>Appwrite</li>
-                        </ul>
-                    </div>
-                    <div class="skill-card">
-                        <h3>Programming</h3>
-                        <ul>
-                            <li>C++</li>
-                            <li>Data Structures and Algorithms</li>
-                            <li>JavaScript</li>
-                            <li>Python</li>
-                            <li>OOPs</li>
-                        </ul>
-                    </div>
-                    <div class="skill-card">
-                        <h3>Tools</h3>
-                        <ul>
-                            <li>Git</li>
-                            <li>GitHub</li>
-                            <li>VS Code</li>
-                            <li>Postman</li>
-                            <li>Atlas / Neon</li>
-                        </ul>
-                    </div>
-                    <div class="skill-card">
-                        <h3>AI&ML</h3>
-                        <ul>
-                            <li>LLM - Training</li>
-                            <li>Prompt Engineering</li>
-                            <li>Machine Learning</li>
-                        </ul>
-                    </div>
-                    <div class="skill-card">
-                        <h3>Deployment</h3>
-                        <ul>
-                            <li>Deployment automation</li>
-                            <li>Service Orchestration</li>
-                            <li>Docker</li>
-                            <li>Kubernetes</li>
-                        </ul>
+                        <u><b>My resume</b></u> :- <a target="_blank"
+                            href="https://drive.google.com/file/d/1o7l8sz0LDp9LefBYOAuuGYvU5g_WHdJt/view?usp=sharing"><i
+                                class="fa-solid fa-file fa-xl" style="color: #f04c64;"></i></a>
                     </div>
                 </div>
-            </div>
+                <h3>Greetings! 👋🏻 I'm a</h2>
+                <h1 class="heroTitle">Full-Stack Developer</h1>
+                <h2 class="heroSubtitle">& Software Engineer</h2>
+                <p class="description">
+                    My name is Kumar Harsh. I am a passionate software engineer with a strong blend of technical expertise and
+                    problem-solving skills, dedicated to building robust applications and crafting innovative digital solutions.
+                </p>
+                <div class="social-links">
+                    <a href="https://github.com/kharsh560" target="_blank" class="social-icon">
+                        <i class="fa-brands fa-github fa-2xl" style="color: #8c8c8c;"></i>
+                    </a>
+                    <a href="https://twitter.com/kharsh560" target="_blank" class="social-icon">
+                        <i class="fa-brands fa-x-twitter fa-2xl" style="color: #999999;"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/kharsh560/" target="_blank" class="social-icon">
+                        <i class="fa-brands fa-linkedin fa-2xl" style="color: #a7aaae;"></i>
+                    </a>
+                    <a href="https://www.instagram.com/kharsh560/" target="_blank" class="social-icon">
+                        <i class="fa-brands fa-instagram fa-2xl" style="color: #8e8f90;"></i>
+                    </a>
+                </div>
+            </main>
 
-            <div class="cta-buttons">
-                <a href="https://drive.google.com/file/d/1FKiw5rS5nF5znLQv2ErKUaWetYIJ6AEW/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
-                <a href="mailto:kharsh560@gmail.com" class="btn btn-secondary">Let's Collaborate</a>
-            </div>
-        </section>
+            <!-- <div id="aboutMeContainerDpAndWriteup">
+                <div id="wrapperDivWrappingDpAndWriteup">
+                    <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
+                    <div id="aboutMeContainerWriteup">
+                        <h1>About Me</h1>
+                        <div>
+                            My resume :- <a target="_blank"
+                                href="https://drive.google.com/file/d/1HooF4SqmK84edZMNINWApt8F5b_elDXp/view?usp=sharing"><i
+                                    class="fa-solid fa-file fa-lg" style="color: #f04c64;"></i></a>
+                        </div>
+                        <p>I am Kumar Harsh, an individual deeply passionate about coding and its various facets. <br>
+                            My primary objectives within the four years of my B.Tech journey, will revolve around acquiring
+                            proficiency in four key areas:<br> <br>
+                            1. Data Structures and Algorithms <br>
+                            2. Full Stack Web Development (MERN stack + NEXT) <br>
+                            3. Data Science:- thus exploring AI & ML! <br>
+                        </p>
+                    </div>
+                </div>
+            </div> -->
+
+            <section class="techStacksAndSkillsSection">
+                <div class="tech-skills-section-container">
+                    <div class="tech-skills-section">
+                        <h2 class="section-title">Tech Stack & Skills</h2>
+                        <div class="skills-grid">
+                            <div class="skill-card">
+                                <h3>Frontend</h3>
+                                <ul>
+                                    <li>HTML, CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>Tailwind CSS</li>
+                                    <li>React</li>
+                                    <li>Next.js</li>
+                                </ul>
+                            </div>
+                            <div class="skill-card">
+                                <h3>Backend</h3>
+                                <ul>
+                                    <li>Node.js</li>
+                                    <li>Express.js</li>
+                                    <li>MongoDB</li>
+                                    <li>Mongoose</li>
+                                    <li>Prisma</li>
+                                    <li>Appwrite</li>
+                                </ul>
+                            </div>
+                            <div class="skill-card">
+                                <h3>Programming</h3>
+                                <ul>
+                                    <li>C++</li>
+                                    <li>Data Structures and Algorithms</li>
+                                    <li>JavaScript</li>
+                                    <li>Python</li>
+                                    <li>OOPs</li>
+                                </ul>
+                            </div>
+                            <div class="skill-card">
+                                <h3>Tools</h3>
+                                <ul>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
+                                    <li>VS Code</li>
+                                    <li>Postman</li>
+                                    <li>Atlas / Neon</li>
+                                </ul>
+                            </div>
+                            <div class="skill-card">
+                                <h3>AI&ML</h3>
+                                <ul>
+                                    <li>LLM - Training</li>
+                                    <li>Prompt Engineering</li>
+                                    <li>Machine Learning</li>
+                                </ul>
+                            </div>
+                            <div class="skill-card">
+                                <h3>Deployment</h3>
+                                <ul>
+                                    <li>Deployment automation</li>
+                                    <li>Service Orchestration</li>
+                                    <li>Docker</li>
+                                    <li>Kubernetes</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cta-buttons">
+                        <a href="https://drive.google.com/file/d/1o7l8sz0LDp9LefBYOAuuGYvU5g_WHdJt/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
+                        <a href="mailto:kharsh560@gmail.com" class="btn btn-secondary">Let's Collaborate</a>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 
@@ -232,7 +231,7 @@
     <!--  ########################################################## Third portion of the website:- About Me  ########################################################## -->
 
     <div id="aboutMeContainer">
-        <hr>
+        <!-- <hr> -->
         <section class="experience-achievement-section">
             <h2 class="experience-achievement-title">Experience</h2>
         
@@ -269,18 +268,20 @@
                 </div>
                 <ul class="responsibilities">
                     <li class="responsibility-item">
-                        Active Member of the Technical Team as a technical executive at CSI-INNOWAVE which is one of the oldest and most prestigious societies at Maharaja Agrasen Institute of Technology, Delhi,
-                        started in the year 2009.
-                    </li>
-                    <li class="responsibility-item">
                         Contributed in making <a href="https://www.csiinnowave.com/">CSI’s website</a> using NEXT.Js, Aceternity UI and Tailwind.
                     </li>
                     <li class="responsibility-item">
-                        Contributing in backend of CSI’s mobile app using Prisma over PostgreSQL, Node.Js & Express handling Auth & CRUD.
+                        Contributing to CSI’s mobile app backend with Prisma, PostgreSQL, Node.js and Express, handling Auth & CRUD operations
+                        to implement voting mechanism, event & venue listing, and fest update notifications for 2000+(exp) users for the upcoming Techno
+                        Cultural fest by CSI.
                     </li>
                     <li class="responsibility-item">
                         Coordinated with my team to organize & execute our society's flagship technical & entertainment fest,
                         Zypher, successfully ensuring and managing a footfall of over 1000 attendees. (September 2024)
+                    </li>
+                    <li class="responsibility-item">
+                        Active Member of the Technical Team as a technical executive at CSI-INNOWAVE which is one of the oldest and most prestigious societies at Maharaja Agrasen Institute of Technology, Delhi,
+                        started in the year 2009.
                     </li>
                 </ul>
             </div>
@@ -311,7 +312,7 @@
         </section>
     </div>
 
-    <hr id="hrAboveMyWorkinLaptop">
+    <!-- <hr id="hrAboveMyWorkinLaptop"> -->
 
     <!--  ########################################################## about me section ends  ########################################################## -->
     <!--  ########################################################## Portfolio section begins  ########################################################## -->
@@ -580,7 +581,7 @@
         </div> -->
 
 
-    <hr>
+    <!-- <hr> -->
 
     <!--  ########################################################## Portfolio section ends  ########################################################## -->
 
@@ -952,7 +953,7 @@
 
     </div>
 
-    <hr>
+    <!-- <hr> -->
 
     <!-- ############################################# Contact #############################################-->
 
