--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             <main class="hero">
                 <div class="myDpContainer">
                     <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
-                    <div>
+                    <div id="resumeContainer">
                         <u><b>My resume</b></u> :- <a target="_blank"
-                            href="https://drive.google.com/file/d/1o7l8sz0LDp9LefBYOAuuGYvU5g_WHdJt/view?usp=sharing"><i
+                            href="https://drive.google.com/file/d/1qvwWj-hpSoPBoOMednYEjg-YB0fNC7Va/view?usp=sharing"><i
                                 class="fa-solid fa-file fa-xl" style="color: #f04c64;"></i></a>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                     </div>
 
                     <div class="cta-buttons">
-                        <a href="https://drive.google.com/file/d/1o7l8sz0LDp9LefBYOAuuGYvU5g_WHdJt/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
+                        <a href="https://drive.google.com/file/d/1qvwWj-hpSoPBoOMednYEjg-YB0fNC7Va/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
                         <a href="mailto:kharsh560@gmail.com" class="btn btn-secondary">Let's Collaborate</a>
                     </div>
                 </div>
