Fixed "tags" section and improves padding.
Fixed "tags" section and improves padding.
Also, improved the "fileIcon". Earlier it came from fontAwesome.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
                     <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
                     <div id="resumeContainer">
                         <u><b>My resume</b></u> :- <a target="_blank"
-                            href="https://drive.google.com/file/d/1QfaUuw-U38TrDrR6cPo4_-kWHIkZjFVa/view?usp=sharing"><i
-                                class="fa-solid fa-file fa-xl" style="color: #f04c64;"></i></a>
+                            href="https://drive.google.com/file/d/1QfaUuw-U38TrDrR6cPo4_-kWHIkZjFVa/view?usp=sharing">
+                            <img src="imageResources/fileIcon.png" alt="fileIcon" class="fileIcon">
+                        </a>
                     </div>
                 </div>
                 <h3>Greetings! 👋🏻 I'm a</h2>
@@ -331,6 +332,7 @@
         <div class="projects">
 
             <!-- Latest works (30 Jan 2025) -->
+             <!-- Try giving 6 tags only, otherwise in keyframe at 100%, the "-200%" gives issues. -->
 
             <article class="project-card">
                 <div class="project-number">1</div>
@@ -346,6 +348,7 @@
                         <span class="tech-badge">TinyMCE</span>
                         <span class="tech-badge">Cloudinary</span>
                         <span class="tech-badge">Multer</span>
+                        <span class="tech-badge">MongoDB</span>
                     </div>
                 </div>
                 <a href="https://github.com/kharsh560/blog_app_aiml_dept" target="_blank" class="project-link">View GitHub Repo</a>
@@ -365,6 +368,7 @@
                         <span class="tech-badge">MongoDB</span>
                         <span class="tech-badge">JWT</span>
                         <span class="tech-badge">Multer</span>
+                        <span class="tech-badge">Aggregation</span>
                     </div>
                 </div>
                 <a href="https://github.com/kharsh560/backend-mega-proj-by-kh" target="_blank" class="project-link">View GitHub Repo</a>
@@ -384,6 +388,7 @@
                         <span class="tech-badge">Express</span>
                         <span class="tech-badge">MongoDB</span>
                         <span class="tech-badge">React</span>
+                        <span class="tech-badge">Aggregation</span>
                     </div>
                 </div>
                 <a href="https://github.com/kharsh560/ChatApp" target="_blank" class="project-link">View GitHub Repo</a>
@@ -399,11 +404,12 @@
                             alt="Todo List Preview" class="project-image">
                     </div>
                     <div class="tech-stack">
-                        <span class="tech-badge">HTML5</span>
-                        <span class="tech-badge">CSS3</span>
-                        <span class="tech-badge">Tailwind</span>
                         <span class="tech-badge">JavaScript</span>
                         <span class="tech-badge">React</span>
+                        <span class="tech-badge">Tailwind</span>
+                        <span class="tech-badge">JavaScript</span>
+                        <span class="tech-badge">Redux Toolkit</span>
+                        <span class="tech-badge">ContextApi</span>
                     </div>
                 </div>
                 <a href="https://todo-with-localstorage-kh.netlify.app/" target="_blank" class="project-link">View Project</a>
@@ -418,11 +424,11 @@
                             alt="Currency Converter Preview" class="project-image">
                     </div>
                     <div class="tech-stack">
-                        <span class="tech-badge">HTML5</span>
-                        <span class="tech-badge">CSS3</span>
-                        <span class="tech-badge">Tailwind</span>
-                        <span class="tech-badge">JavaScript</span>
                         <span class="tech-badge">React</span>
+                        <span class="tech-badge">Tailwind CSS</span>
+                        <span class="tech-badge">JavaScript</span>
+                        <span class="tech-badge">API handling</span>
+                        <span class="tech-badge">Content Mapping</span>
                     </div>
                 </div>
                 <a href="https://kh-currency-changer.netlify.app/" target="_blank" class="project-link">View Project</a>
@@ -437,11 +443,11 @@
                             alt="Currency Converter Preview" class="project-image">
                     </div>
                     <div class="tech-stack">
-                        <span class="tech-badge">HTML5</span>
-                        <span class="tech-badge">CSS3</span>
-                        <span class="tech-badge">Tailwind</span>
-                        <span class="tech-badge">JavaScript</span>
                         <span class="tech-badge">React</span>
+                        <span class="tech-badge">JavaScript</span>
+                        <span class="tech-badge">Tailwind CSS</span>
+                        <span class="tech-badge">Prop Handling</span>
+                        <span class="tech-badge">Logical Aptitude</span>
                     </div>
                 </div>
                 <a href="https://kh-password-generator.netlify.app/" target="_blank" class="project-link">View Project</a>
