--- a/index.html
+++ b/index.html
@@ -419,6 +419,25 @@
                 </div>
                 <a href="https://todo-with-localstorage-kh.netlify.app/" target="_blank" class="project-link">Deployed Link</a>
             </article>
+
+            <article class="project-card">
+                <div class="project-number"></div>
+                <div class="project-content">
+                    <div class="project-header">
+                        <h2>Code Playground</h2>
+                        <img src="./imageResources/codePlayground.webp"
+                            alt="Code Playground Preview" class="project-image">
+                    </div>
+                    <div class="tech-stack">
+                        <span class="tech-badge">React</span>
+                        <span class="tech-badge">Tailwind CSS</span>
+                        <span class="tech-badge">JavaScript</span>
+                        <span class="tech-badge">Redux</span>
+                        <span class="tech-badge">Logic</span>
+                    </div>
+                </div>
+                <a href="https://react-machine-coding-playground-by-kh.netlify.app/" target="_blank" class="project-link">Deployed Link</a>
+            </article>
         
             <article class="project-card">
                 <div class="project-number"></div>
