Updated Resume and experience section.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
                     <div id="resumeContainer">
                         <u><b>My resume</b></u> :- <a target="_blank"
-                            href="https://drive.google.com/file/d/1k0v5IdgBrTSEZ-DM_xJf9XYaHCy_dHYz/view?usp=sharing">
+                            href="https://drive.google.com/file/d/1HqVZ-IVC1PTkEO-MvYZODVXlG8VRnTfL/view?usp=sharing">
                             <img src="imageResources/fileIcon.png" alt="fileIcon" class="fileIcon">
                         </a>
                     </div>
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="cta-buttons">
-                        <a href="https://drive.google.com/file/d/1k0v5IdgBrTSEZ-DM_xJf9XYaHCy_dHYz/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
+                        <a href="https://drive.google.com/file/d/1HqVZ-IVC1PTkEO-MvYZODVXlG8VRnTfL/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
                         <a href="mailto:kharsh560@gmail.com" class="btn btn-secondary">Let's Collaborate</a>
                     </div>
                 </div>
@@ -244,19 +244,23 @@
                 </div>
                 <ul class="responsibilities">
                     <li class="responsibility-item">
-                        Kubernetes Deployment and Service Orchestration: Deployed and managed containerized services using
-                        Kubernetes on Docker, optimizing ingress gateways, resource allocation, and service connections.
-                        Automated deployments with Helm and resolved pod-related issues for reliable microservice communication.
+                        Kubernetes Deployment and Service Orchestration : Deployed and managed containerized services using Kubernetes on
+                        Docker, optimizing ingress gateways, resource allocation, and service connections. Automated deployments with Helm and resolved
+                        pod-related issues for reliable microservice communication. Finally moved to MS Azure’s AKS to automate cluster creation and
+                        deployment.
                     </li>
                     <li class="responsibility-item">
-                        Spearheaded the development of a responsive, user-centric full-stack webapp using Next.js translating
-                        business requirements into a seamless end-to-end solution by streamlining the entire development
-                        pipeline juggling between frontend and backend.
+                        Full-Stack development : Developed a full-stack webapp from scratch using Next.js. with theme inspired from eraser.Io.
+                        Used Redux for
+                        state management and tackled the stale value issues caused by useEffect and useState due to JS closures. Handled prop
+                        drilling efficiently where using redux was not an option. Integrated “ReactFlow” to make interactive workflows with custom nodes. Used
+                        conditional rendering for loaders. Made custom Modals(pop-ups with other bg blurred). Implemented Next Auth via different methods including,
+                        email, GitHub and Google using Prisma as ODM and wrote backend schema, controllers, routes & API endpoints as separate express app.
                     </li>
                     <li class="responsibility-item">
-                        Training LLMs using prompt engineering, enabling the start-up to deploy AI-driven automation features
-                        that'll enhance its core product offering and differentiate it in the market by integrating LLM-based
-                        solutions into customer-facing products.
+                        LLM Training with Prompt Engineering : Integrated a multi-LLM model, akin to a custom LangChain, to generate
+                        recommendations, paired with a scoring engine that evaluates LLMs based on custom parameters to identify the top-performing model and a
+                        trained chatbot.
                     </li>
                 </ul>
             </div>
@@ -277,8 +281,10 @@
                         Cultural fest by CSI.
                     </li>
                     <li class="responsibility-item">
-                        Coordinated with my team to organize & execute our society's flagship technical & entertainment fest,
-                        Zypher, successfully ensuring and managing a footfall of over 1000 attendees. (September 2024)
+                        Selected as one of 11 <a href="https://drive.google.com/file/d/1m_y4s6kZfVaP9CUBGYEQWw6RSj8UjFSg/view" target="_blank">mentors</a> to evaluate the first three rounds of the "Code Genesis" hackathon under "Uncharted",
+                        culminating in a finale at Microsoft Gurugram. Shortlisted 250+ teams, narrowing them down to 16 finalists. Additionally, worked with a team of
+                        50 executives to organize and execute “Zypher”, another flagship techno-cultural fest by CSI, successfully managing a footfall of over
+                        1000 attendees.
                     </li>
                     <li class="responsibility-item">
                         Active Member of the Technical Team as a technical executive at CSI-INNOWAVE which is one of the oldest and most prestigious societies at Maharaja Agrasen Institute of Technology, Delhi,
@@ -322,7 +328,7 @@
         <div class="myWorkContainer">
              <h1 id="myWork">My Hosted Work</h1>
         </div>
-        <a href="https://drive.google.com/file/d/1k0v5IdgBrTSEZ-DM_xJf9XYaHCy_dHYz/view?usp=sharing" target="_blank"
+        <a href="https://drive.google.com/file/d/1HqVZ-IVC1PTkEO-MvYZODVXlG8VRnTfL/view?usp=sharing" target="_blank"
             class="resumeLinkForAdvWork">
             Click here to go to resume for Full-Stack projects and current internship details.
         </a>
