Updated resume with latest deployed blogapp link.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <img src="imageResources/KH_dp.png" alt="myDp" class="myDp">
                     <div id="resumeContainer">
                         <u><b>My resume</b></u> :- <a target="_blank"
-                            href="https://drive.google.com/file/d/1HqVZ-IVC1PTkEO-MvYZODVXlG8VRnTfL/view?usp=sharing">
+                            href="https://drive.google.com/file/d/1MYFtfLS3daUOo6MiqoM7TTEoRLkVL-en/view?usp=sharing">
                             <img src="imageResources/fileIcon.png" alt="fileIcon" class="fileIcon">
                         </a>
                     </div>
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="cta-buttons">
-                        <a href="https://drive.google.com/file/d/1HqVZ-IVC1PTkEO-MvYZODVXlG8VRnTfL/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
+                        <a href="https://drive.google.com/file/d/1MYFtfLS3daUOo6MiqoM7TTEoRLkVL-en/view?usp=sharing" target="_blank" class="btn btn-primary">Work With Me</a>
                         <a href="mailto:kharsh560@gmail.com" class="btn btn-secondary">Let's Collaborate</a>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
         <div class="myWorkContainer">
              <h1 id="myWork">My Hosted Work</h1>
         </div>
-        <a href="https://drive.google.com/file/d/1HqVZ-IVC1PTkEO-MvYZODVXlG8VRnTfL/view?usp=sharing" target="_blank"
+        <a href="https://drive.google.com/file/d/1MYFtfLS3daUOo6MiqoM7TTEoRLkVL-en/view?usp=sharing" target="_blank"
             class="resumeLinkForAdvWork">
             Click here to go to resume for Full-Stack projects and current internship details.
         </a>
@@ -359,7 +359,7 @@
                 </div>
                 <!--  -->
                  <div class="projectLinksContainer">
-                     <a href="http://64.227.140.158:3000/" target="_blank" class="project-link">Deployed Link</a>
+                     <a href="https://mait-aimldept-blogapp.live/" target="_blank" class="project-link">Deployed Link</a>
                     <a href="https://github.com/kharsh560/blog_app_aiml_dept" target="_blank" class="project-link">GitHub Repo</a>
 
                  </div>
